--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-@font-face {
-	font-family: Poppins;
-	src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-}
-
-body { background-color: white;
+body { background-color: #6BC66B;
 	
 }
 
@@ -24,14 +19,15 @@ body { background-color: white;
 
 #shape {
 	position: absolute;
-	width: 1000px;
+	width: 80%;
 	height: 2853px;
-	left: 190px;
-	top: 200px;
-	background: #EAEAEA;
+	left: 10%;
+	top: 190px;
+	background: white;
 	border-radius: 70px;
 	z-index: 5;
 	transition: 0.2s;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .footer {
@@ -51,11 +47,10 @@ body { background-color: white;
 	top: 0px;
 	width: 100%;
 	z-index: 99;
-	background-color: white;
-	font-family: Poppins;
-	font-style: normal;
+	background-color: #6BC66B;
+	font-family: 'Poppins', sans-serif;
 	font-size:8px;
 	transition: 0.4s;
-
+	color: white;
 	
 }
